--- a/index.html
+++ b/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Horizon Construtora</title>
 </head>
 <body>
-    <p>teste</p>
+    <header>
+        <div class="container">
+            <div class="logo">
+                <img src="images/logo.png" alt="Horizon logo">
+            </div>
+            <div class="menu">
+                <nav>
+                    <a href="index.html">Home</a>
+                    <a href="#">Serviços</a>
+                    <a href="#">Galeria</a>
+                    <a href="#">Contato</a>
+                    <a href="#">Noticias</a>
+                    <a href="#">Sobre nós</a>
+                </nav>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
