--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="#">Serviços</a>
                     <a href="#">Galeria</a>
                     <a href="#">Contato</a>
-                    <a href="#">Noticias</a>
+                    <a href="#">Notícias</a>
                     <a href="#">Sobre nós</a>
                 </nav>
             </div>
