Creation of all pages
create all pages and added text to main page

--- a/noticias.html
+++ b/noticias.html
@@ -3,18 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="noticias.css">
     <title>Horizon Construtora</title>
-    <style>
-        .frase1{
-            font-family: "Lalezar", system-ui;
-            color: orange;
-             font-size: 100px;
-             padding-top: 100px; /*muda a frase1 de forma vertical */
-             padding-left: 50px; /*muda a frase1 de forma horizontal */
-             text-shadow: 10px 10px 5px rgb(118, 117, 121); /* cria uma sombra ao redor do texto */
-        }
-    </style>
 </head>
 <body>
     <header>
@@ -34,15 +24,9 @@
             </div>
         </div>
     </header>
-    <div class="conteudo">
-    <div>
-        <h1 class="frase1"> 
-            Conheça a maior <br> construtora imobilária <br> da região
-        </h1>
-        <h2 class="frase2" style="color: grey;"> Ultimos lançamentos</h2>
-        <h3></h3>
+    <div class="main_noticias">
+
     </div>
-    </div>
-   
+    
 </body>
 </html>
