--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
         <h3></h3>
     </div>
     </div>
-   
+    <footer>
+        <div class="rodape">
+            <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web por Eduardo Gondim Tomazini - 837757</p>
+        </div>
+    </footer>
 </body>
 </html>
