--- a/index.html
+++ b/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Horizon Construtora</title>
     <style>
-        .frase1{
+        .frase1 {
             font-family: "Lalezar", system-ui;
             color: orange;
-             font-size: 100px;
-             padding-top: 100px; /*muda a frase1 de forma vertical */
-             padding-left: 50px; /*muda a frase1 de forma horizontal */
-             text-shadow: 10px 10px 5px rgb(118, 117, 121); /* cria uma sombra ao redor do texto */
+            font-size: 100px;
+            padding-top: 100px;
+            /*muda a frase1 de forma vertical */
+            padding-left: 50px;
+            /*muda a frase1 de forma horizontal */
+            text-shadow: 10px 10px 5px rgb(118, 117, 121);
+            /* cria uma sombra ao redor do texto */
         }
     </style>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -35,19 +40,78 @@
         </div>
     </header>
     <div class="conteudo">
-    <div>
-        <h1 class="frase1"> 
-            Conheça a maior <br> construtora imobilária <br> da região
-        </h1>
-        <h2 class="frase2" style="color: grey;"> Ultimos lançamentos</h2>
-        <h3></h3>
+
+
+        <div>
+            <h1 class="frase1">
+                Conheça a maior <br> construtora imobilária <br> da região
+            </h1>
+            <h2 class="frase2" style="color: grey;"> Ultimos lançamentos</h2>
+            <h3></h3>
+        </div>
+        <div class="Slider">
+            <div class="sombraslider">
+
+            </div>
+        <div class="slideshowcontainer">
+            <div class="mySlides fate">
+                <img src="images/modelo paisagem.jpg" alt="Modelo Predio 1" style="width: 100%; border-radius: 10px;">
+            </div>
+            <div class="mySlides fate">
+                <img src="images/predio2.jpg" alt="Modelo Predio 2" style="width: 100%; border-radius: 10px;">
+            </div>
+            <div class="mySlides fate">
+                <img src="images/predio3.jpg" alt="Modelo Predio 3" style="width: 100%; border-radius: 10px;">
+            </div>
+            <div class="mySlides fate">
+                <img src="images/predio4.jpg" alt="Modelo Predio 4" style="width: 100%; border-radius: 10px;">
+            </div>
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+        </div>
+        <div style="text-align:center ; position: relative ;z-index: 99;">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+            <span class="dot" onclick="currentSlide(4)"></span>
+        </div>
     </div>
     </div>
     <footer>
         <div class="rodape">
             <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
-            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web por Eduardo Gondim Tomazini - 837757</p>
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web
+                por Eduardo Gondim Tomazini - 837757</p>
         </div>
     </footer>
+    <script>
+        let slideIndex = 1;
+        showSlides(slideIndex);
+
+        function plusSlides(n) {
+            showSlides(slideIndex += n);
+        }
+
+        function currentSlide(n) {
+            showSlides(slideIndex = n);
+        }
+
+        function showSlides(n) {
+            let i;
+            let slides = document.getElementsByClassName("mySlides");
+            let dots = document.getElementsByClassName("dot");
+            if (n > slides.length) { slideIndex = 1 }
+            if (n < 1) { slideIndex = slides.length }
+            for (i = 0; i < slides.length; i++) {
+                slides[i].style.display = "none";
+            }
+            for (i = 0; i < dots.length; i++) {
+                dots[i].className = dots[i].className.replace(" active", "");
+            }
+            slides[slideIndex - 1].style.display = "block";
+            dots[slideIndex - 1].className += " active";
+        }
+    </script>
 </body>
+
 </html>
