started contato page
started contato page

--- a/contato.html
+++ b/contato.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
     <title>Horizon Construtora</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -25,8 +27,61 @@
         </div>
     </header>
     <div class="main_contato">
+        <h1 class="FaleConosco">Fale conosco</h1>
+        <p class="textopreform">
+            Na Horizon, estamos sempre prontos para ouvir você!
+            Seja para tirar dúvidas, solicitar informações sobre nossos projetos ou discutir seu próximo sonho de
+            construção,
+            nossa equipe está à disposição para ajudar.
+        </p>
+        <div class="InformacoesContato">
+            <h2 class="infoContato">
+                Informações de Contato
+            </h2>
+            <p class="telefone">
+                Telefone: (XX) XXXX-XXXX
+            </p>
+            <p class="email">
+                E-mail: contato@horizonconstrutora.com.br
+            </p>
+            <p class="endereco">
+                Endereço: Avenida das Construtoras, 123, Bairro Exemplo, Cidade - Estado
+            </p>
+            <br>
+            <h3 class="horarioatendimento">
+                Horário de Atendimento
+            </h3>
+            <p class="horarios">
+                Segunda a Sexta: 08h às 18h
+                <br>
+                Sábado: 09h às 13h
+                <br>
+                Domingo: Fechado
+            </p>
+        </div>
+        <div class="formulario">
+            <form action="">
+                <fieldset>
+                    <div>
+                        <label> Nome </label>
+                        <input type="text" name="nome" placeholder="Digite seu nome">
+                    </div>
+                    <div>
+                        <label> Email </label>
+                        <input type="email" name="email" placeholder="Digite seu email">
+                    </div>
+                </fieldset>
+            </form>
+        </div>
 
     </div>
-    
+    <footer>
+        <div class="rodape">
+            <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web
+                por Eduardo Gondim Tomazini - 837757</p>
+        </div>
+    </footer>
 </body>
+
 </html>
