--- a/index.html
+++ b/index.html
@@ -53,29 +53,30 @@
             <div class="sombraslider">
 
             </div>
-        <div class="slideshowcontainer">
-            <div class="mySlides fate">
-                <img src="images/modelo paisagem.jpg" alt="Modelo Predio 1" style="width: 100%; border-radius: 10px;">
+            <div class="slideshowcontainer">
+                <div class="mySlides fate">
+                    <img src="images/modelo paisagem.jpg" alt="Modelo Predio 1"
+                        style="width: 100%; border-radius: 10px;">
+                </div>
+                <div class="mySlides fate">
+                    <img src="images/predio2.jpg" alt="Modelo Predio 2" style="width: 100%; border-radius: 10px;">
+                </div>
+                <div class="mySlides fate">
+                    <img src="images/predio3.jpg" alt="Modelo Predio 3" style="width: 100%; border-radius: 10px;">
+                </div>
+                <div class="mySlides fate">
+                    <img src="images/predio4.jpg" alt="Modelo Predio 4" style="width: 100%; border-radius: 10px;">
+                </div>
+                <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+                <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <div class="mySlides fate">
-                <img src="images/predio2.jpg" alt="Modelo Predio 2" style="width: 100%; border-radius: 10px;">
+            <div style="text-align:center ; position: relative ;z-index: 99;">
+                <span class="dot" onclick="currentSlide(1)"></span>
+                <span class="dot" onclick="currentSlide(2)"></span>
+                <span class="dot" onclick="currentSlide(3)"></span>
+                <span class="dot" onclick="currentSlide(4)"></span>
             </div>
-            <div class="mySlides fate">
-                <img src="images/predio3.jpg" alt="Modelo Predio 3" style="width: 100%; border-radius: 10px;">
-            </div>
-            <div class="mySlides fate">
-                <img src="images/predio4.jpg" alt="Modelo Predio 4" style="width: 100%; border-radius: 10px;">
-            </div>
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-        <div style="text-align:center ; position: relative ;z-index: 99;">
-            <span class="dot" onclick="currentSlide(1)"></span>
-            <span class="dot" onclick="currentSlide(2)"></span>
-            <span class="dot" onclick="currentSlide(3)"></span>
-            <span class="dot" onclick="currentSlide(4)"></span>
-        </div>
-    </div>
     </div>
     <footer>
         <div class="rodape">
