--- a/galeria.html
+++ b/galeria.html
@@ -25,7 +25,35 @@
         </div>
     </header>
     <div class="main_galeria">
+        <h1 style="color: orange; font-size: 40px; font-family:'Lalezar', system-ui;">Confira aqui nossos ultimos projetos</h1>
+        <div class="galery">
+            <div>
+                <h2> Residencial</h2>
 
+                <img src="images/casa1.jpg" alt="Casa Residencial">
+                <img src="images/casa2.jpg" alt="Casa Residencial">
+                <img src="images/casa3.jpg" alt="Csasa Residencial">
+            </div>
+            <div>
+                <h2> Comercial</h2>
+            </div>
+
+            <div>
+                <h2>empresarial</h2>
+
+                <img src="images/predio2.jpg" alt="Predio Empresarial">
+                <img src="images/predio3.jpg" alt="Predio Empresarial">
+                <img src="images/predio4.jpg" alt="Predio Empresarial">
+
+            </div>
+        </div>
     </div>
+    <footer>
+        <div class="rodape">
+            <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web
+                por Eduardo Gondim Tomazini - 837757</p>
+        </div>
+    </footer>
 </body>
 </html>
