--- a/galeria.html
+++ b/galeria.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="galeria.css">
+    <style>
+        .titulogrid {
+            color: orange;
+            font-size: 40px;
+            font-family: 'Lalezar', system-ui;
+        }
+    </style>
     <title>Horizon Construtora</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -25,28 +34,50 @@
         </div>
     </header>
     <div class="main_galeria">
-        <h1 style="color: orange; font-size: 40px; font-family:'Lalezar', system-ui;">Confira aqui nossos ultimos projetos</h1>
-        <div class="galery">
-            <div>
-                <h2> Residencial</h2>
 
-                <img src="images/casa1.jpg" alt="Casa Residencial">
-                <img src="images/casa2.jpg" alt="Casa Residencial">
-                <img src="images/casa3.jpg" alt="Csasa Residencial">
+        <div class="parent">
+            <div class="div1">
+                <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui;">Confira aqui nossos ultimos projetos</h1>
             </div>
-            <div>
-                <h2> Comercial</h2>
+            <div class="div2">
+                <h2 class="titulogrid"> Residenciais</h2>
             </div>
-
-            <div>
-                <h2>empresarial</h2>
-
-                <img src="images/predio2.jpg" alt="Predio Empresarial">
-                <img src="images/predio3.jpg" alt="Predio Empresarial">
-                <img src="images/predio4.jpg" alt="Predio Empresarial">
-
+            <div class="div3">
+                <h2 class="titulogrid"> Comerciais</h2>
+            </div>
+            <div class="div4">
+                <h2 class="titulogrid"> Empresarias</h2>
+            </div>
+            <div class="div5">
+                <img class="imagens" src="images/casa1.jpg" alt="Casa Residencial">
+            </div>
+            <div class="div6">
+                <img class="imagens" src="images/casa2.jpg" alt="Casa Residencial">
+            </div>
+            <div class="div7">
+                <img class="imagens" src="images/casa3.jpg" alt="Casa Residencial">
+            </div>
+            <div class="div8">
+                <img class="imagens" src="images/loja1.jpg" alt="Loja Comercial">
+            </div>
+            <div class="div9">
+                <img class="imagens" src="images/loja2.jpg" alt="Loja Comercial">
+            </div>
+            <div class="div10">
+                <img class="imagens" src="images/loja3.jpg" alt="Loja Comercial">
+            </div>
+            <div class="div11">
+                <img class="imagens" src="images/predio2.jpg" alt="Predio Comercial">
+            </div>
+            <div class="div12">
+                <img class="imagens" src="images/predio3.jpg" alt="Predio Comercial">
+            </div>
+            <div class="div13">
+                <img class="imagens" src="images/predio4.jpg" alt="Predio Comercial">
             </div>
         </div>
+
+
     </div>
     <footer>
         <div class="rodape">
@@ -56,4 +87,5 @@
         </div>
     </footer>
 </body>
+
 </html>
