--- a/sobrenos.html
+++ b/sobrenos.html
@@ -27,6 +27,12 @@
     <div class="main_sobrenos">
 
     </div>
-    
+    <footer>
+        <div class="rodape">
+            <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web
+                por Eduardo Gondim Tomazini - 837757</p>
+        </div>
+    </footer>
 </body>
 </html>
