--- a/contato.html
+++ b/contato.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="contato.css">
+    <style>
+        .InformacoesContato{
+            font-size: 20px;
+            font-family: "Lalezar", system-ui;
+        }
+    </style>
     <title>Horizon Construtora</title>
 </head>
 
