finished sobrenos.html
finished sobrenos.html

--- a/sobrenos.html
+++ b/sobrenos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="sobrenos.css">
+    <style>
+        .Subtitulo{
+            color: orange;
+            font-size: 50px;
+            font-family:'Lalezar', system-ui;
+            margin: auto;
+        }
+    </style>
     <title>Horizon Construtora</title>
 </head>
 <body>
@@ -25,6 +33,36 @@
         </div>
     </header>
     <div class="main_sobrenos">
+
+        <div style="display: flex; flex-direction: column;">
+            <h1 style="margin: auto; color: orange; font-size: 70px; font-family:'Lalezar', system-ui;">Nossa historia</h1>
+            <br>
+            <p class="paragrafo">
+                A Construtora Horizon foi fundada há mais de 40 anos por um grupo de visionários que acreditava
+                no potencial de transformar sonhos em realidade. Desde o início, a empresa se destacou pela qualidade
+                e inovação em projetos residenciais, comerciais e empresariais. Com uma equipe de profissionais dedicados
+                e uma abordagem centrada no cliente, a Horizon construiu uma reputação sólida, entregando obras que não apenas atendem,
+                mas superam as expectativas.
+            </p>
+            <br>
+            <p class="paragrafo">
+                Ao longo dos anos, a construtora expandiu sua atuação, incorporando tecnologias sustentáveis e
+                práticas de construção ecológicas em seus projetos. Cada nova edificação é uma combinação perfeita de
+                funcionalidade e estética, refletindo o compromisso da Horizon com a excelência.
+                Hoje, a empresa é um símbolo de confiança e qualidade no setor da construção, continuando a moldar paisagens urbanas e
+                a criar lares e espaços de trabalho inspiradores.
+            </p>
+        </div>
+        <div style="display: flex; flex-direction: column;">
+            <h2 class="Subtitulo"> Quer fazer parte dessa nossa historia?</h2>
+            <p class="paragrafo" style="margin: auto;">então entre em contato e faça seu orçamento, estamos esperando por você</p>
+            <br>
+            <button class="botao" type="button">
+                <a href="contato.html"> Contato</a>
+            </button>
+            <br>
+            
+        </div>
 
     </div>
     <footer>
