finished noticias.html
finished noticias.html

--- a/galeria.html
+++ b/galeria.html
@@ -35,7 +35,7 @@
     </header>
     <div class="main_galeria">
 
-        <div class="parent">
+        <div class="parent" style="margin: auto;">
             <div class="div1">
                 <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui;">Confira aqui nossos ultimos projetos</h1>
             </div>
