--- a/noticias.html
+++ b/noticias.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="noticias.css">
+    <style>
+        .paragrafo{
+            font-family: 'Lalezar', system-ui;
+            font-size: 25px;
+            color: whitesmoke;
+            margin-left: 5px;
+        }
+    </style>
     <title>Horizon Construtora</title>
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -26,7 +36,63 @@
     </header>
     <div class="main_noticias">
 
+        <div class="noticias">
+            <div class="parent">
+                <div class="div1" style="display: flex;">
+                    <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui; margin: auto;">Confira aqui as Principais noticias</h1>
+                </div>
+                <div class="div2" style="display: flex;">
+                    <img class="imagens" src="images/pirarucu.jpg" alt="Pirarucu em um tanque">
+                </div>
+                <div class="div3">
+                    <h2 class="NoticiaPirarucu">Construtora Horizon Inova com Criação de Tanques para Pirarucu em Manaus </h2>
+                    <p class="paragrafo">
+                        Manaus, AM - A Construtora Horizon firmou parceria com o governo estadual para <br>
+                        construir tanques de criação de pirarucu, um dos peixes mais emblemáticos da Amazônia. <br> 
+                        O projeto visa promover a aquicultura sustentável e fortalecer a economia local. <br>
+
+                        Com mais de 40 anos de experiência, a Horizon projetou estruturas que garantem o bem-estar dos <br>
+                        peixes e respeitam o meio ambiente. A iniciativa não apenas gera empregos, mas também busca <br>
+                        assegurar a segurança alimentar da região. <br>
+
+                        “A parceria reflete nosso compromisso com a sustentabilidade e o desenvolvimento social”, <br>
+                        destacou o diretor da Horizon. Essa ação é um passo importante para a valorização dos recursos <br>
+                        naturais da Amazônia, promovendo um futuro mais sustentável. <br>
+                    </p>
+                </div>
+                <div class="div4">
+                    <img class="imagens" src="images/CanteiroDeObra.jpg" alt="Canteiro De Obra">
+                </div>
+                <div class="div5">
+                    <h2 class="NoticiaObra">Construtora Horizon Recebe Prêmio de Melhor Canteiro de Obra para Trabalhar </h2>
+                    <p class="paragrafo">
+                        A Construtora Horizon foi premiada como o Melhor Canteiro de Obra para Trabalhar, um
+                        reconhecimento que ressalta suas práticas exemplares na construção civil. A premiação, promovida
+                        por uma respeitada instituição do setor, celebra empresas que garantem um ambiente de trabalho
+                        seguro e motivador para seus colaboradores.
+
+                        Com mais de 40 anos de experiência, a Horizon se destaca em Ribeirão Preto pela implementação de
+                        programas de saúde, segurança e treinamentos contínuos. O canteiro de obras premiado adota
+                        medidas inovadoras que priorizam o bem-estar da equipe.
+
+                        “Ao receber este prêmio, reafirmamos nosso compromisso com a excelência e a valorização de
+                        nossos profissionais”, declarou o diretor da Horizon. A conquista não só solidifica a reputação
+                        da construtora na região, mas também inspira outras empresas a adotar boas práticas no ambiente
+                        de trabalho.
+                    </p>
+                </div>
+            </div>
+        </div>
+
     </div>
-    
+
+    <footer>
+        <div class="rodape">
+            <img class="logorodape" src="images/logo.png" alt="Horizon Logo">
+            <p class="textorodape">Projeto desenvolvido para a avaliação parcial da disciplina de Desenvolvimento web
+                por Eduardo Gondim Tomazini - 837757</p>
+        </div>
+    </footer>
 </body>
+
 </html>
