finished servicos.html
finished servicos.html

--- a/galeria.html
+++ b/galeria.html
@@ -36,8 +36,8 @@
     <div class="main_galeria">
 
         <div class="parent" style="margin: auto;">
-            <div class="div1">
-                <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui;">Confira aqui nossos ultimos projetos</h1>
+            <div class="div1" style="display: flex;">
+                <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui; margin: auto;">Confira aqui nossos ultimos projetos</h1>
             </div>
             <div class="div2">
                 <h2 class="titulogrid"> Residenciais</h2>
