--- a/noticias.html
+++ b/noticias.html
@@ -39,7 +39,7 @@
         <div class="noticias">
             <div class="parent">
                 <div class="div1" style="display: flex;">
-                    <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui; margin: auto;">Confira aqui as Principais noticias</h1>
+                    <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui; margin: auto; margin-top: 5px;">Confira aqui as Principais noticias</h1>
                 </div>
                 <div class="div2" style="display: flex;">
                     <img class="imagens" src="images/pirarucu.jpg" alt="Pirarucu em um tanque">
