--- a/servicos.html
+++ b/servicos.html
@@ -75,7 +75,7 @@
         <div class="sonhos" style="display: flex; flex-direction: column;">
             <h1 style="color: orange; font-size: 60px; font-family:'Lalezar', system-ui; margin: auto; margin-top: -150px; "">Não espere para realizar seu sonho</h1>
             <button class="botao" type="button">
-                <a href="contato.html" style="text-decoration: none;">Contato</a>
+                <a href="contato.html" style="text-decoration: none; color: black;">Contato</a>
             </button>
             <br>
         </div>
